Quorum3/Library/Tests/Inheritance/Pass/SingleInheritanceSimpleOneLayer.quorum
class Main
    
    action Main
        B b
    end
end