Quorum3/Library/Tests/Inheritance/Fail/E.quorum
class E is D
    action Main
        
    end
end